samples/_failures_safe/1761446207_0439f7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_541f517f.c: In function ‘main’:
./samples/SAFE/__tmp_541f517f.c:160:17: error: expected declaration or statement at end of input
  160 |                 printf("Failed to add log entry\n");
      |                 ^~~~~~
./samples/SAFE/__tmp_541f517f.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_541f517f.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_541f517f.c:160:17: error: expected declaration or statement at end of input
